Moving slow playability check to PlayPlayback

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="hide">Hide</string>
     <string name="delete">Delete</string>
     <string name="no_items">No Items</string>
+    <string name="could_not_open_playback">Could not open playback \"%1s\"</string>
 </resources>
